public/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  /* font */
  font-family: 'Pixelify Sans', sans-serif;
  font-optical-sizing: auto;
}
:root {
  font-size: 16px;
}
body {
  /* background: blue; */
}
h1 {
  font-size: 3rem;
}
.btn {
  pointer-events: all;
  background: white;
  color: black;
  margin: 0.5rem;
  padding: 0.5rem;
  border: none;
  transition: 0.2s;
  cursor: pointer;
}
.btn:hover {
  background: black;
  color: white;
}
a {
  color: white;
  text-decoration: none;
  transition: 0.2s;
}
a:hover {
  text-shadow: 1px 1px 5px white;
}
.layout {
  color: white;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  pointer-events: none;
  font-style: normal;
}

.clickable {
  pointer-events: all;
}

#button-container {
  position: absolute;
  z-index: 1;
  bottom: 3.5rem;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
#button-container-inner {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.control-btn,
#toggle-btn {
  font-size: 2rem;
  border-radius: 50%;
  border: none;
  width: 4rem;
  height: 4rem;
  margin: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.control-btn:hover {
  background: rgb(190, 190, 190);
}
/* main menu */
#main-menu {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: fit-content;
  height: fit-content;
  padding: 1rem;
  text-align: center;

  background: rgb(24, 24, 24);
  color: white;
  margin: auto;
}

.menu-content {
  margin: 1rem;
}

/* score board-current session */
#score-board {
  background: rgb(24, 24, 24);

  pointer-events: none;
  position: absolute;
  bottom: 0;
  color: white;
  font-size: 2rem;
  padding: 0.5rem;
  border-radius: 10px 10px 0 0;
  border-top: solid white 2px;
  border-left: solid white 2px;
  border-right: solid white 2px;
  margin: 0 1rem;
}
/* score board - leaderboard */
#leader-board {
  background: rgb(24, 24, 24);

  pointer-events: none;
  position: absolute;
  top: 0;
  right: 0;
  color: white;
  font-size: 2rem;
  padding: 0.5rem;
  border-radius: 0 0 10px 10px;
  border-bottom: solid white 2px;
  border-left: solid white 2px;
  border-right: solid white 2px;
  margin: 0 1rem;
}

#toggle-btn {
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
}

@media screen and (max-width: 768px) {
  :root {
    font-size: 13px;
  }
  .layout {
    justify-content: flex-start;
  }
  #score-board {
    font-size: 1.5rem;
    left: 0;
    right: 0;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
  }
  #leader-board {
    font-size: 1.5rem;
    left: 0;
    right: 0;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
  }
}

